--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "dependencies": {
     "@astrojs/image": "^0.18.0",
     "@astrojs/mdx": "^1.1.0",
-    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.0.0",
     "aos": "^2.3.4",
-    "tailwindcss": "^3.3.5",
-    "astro": "^3.6.5"
+    "astro": "^3.6.5",
+    "tailwindcss": "^3.3.5"
   },
   "scripts": {
     "dev": "astro dev",
